# vue-fastapi-admin

./: README.md  pyproject.toml
app/: __init__.py
app/api/v1/: __init__.py
app/api/v1/base/: base.py
app/api/v1/file/: __init__.py  files.py
app/controllers/: file.py
app/files/: 南京指掌易.xls
app/models/: admin.py  base.py
app/schemas/: file.py
app/settings/: config.py
app/utils/: file.py
static/: index.html
static/assets/: 401-d88be080.js  403-3e5aabcc.js  404-53cd1692.js  500-4661fd23.js  Add-d3888378.js  AppPage-2c648aa5.js  CommonPage-1b7131ea.js  CrudTable-1b72018f.js  FormItem-a3720c19.js  Image-9de67d83.js  Input-80da2416.js  QueryBarItem-8c7c36d3.js  Result-0d0a3625.js  Switch-210aff7b.js  Tabs-c7dd0a0d.js  Tree-af06686b.js  index-1319d715.js  index-1a17841f.js  index-1b711de4.js  index-1c8dc8c0.js  index-4215cbd1.js  index-a69d4e51.js  index-baf3d757.js  index-e1d03aaf.js  index-e9c8b546.css  useCRUD-32249973.js
web/src/api/: index.js
web/src/views/workbench/: index.vue
